--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="project.chris.findweather.MainActivity">
 
-    <Button
-        android:id="@+id/btRequest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Request"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--<android.support.design.widget.TabLayout-->
+        <!--android:id="@+id/tlTab"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:tabGravity="fill"-->
+        <!--app:tabIndicatorColor="@color/colorAccent"-->
+        <!--app:tabMode="fixed"-->
+        <!--app:tabTextColor="@color/colorPrimary" />-->
 
-</android.support.constraint.ConstraintLayout>
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/vpContainer"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />
+        -->
+    <FrameLayout
+        android:id="@+id/flContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
