--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#FFFFFF</color>
+    <color name="background_gray">#eeeeee</color>
+    <color name="light_gray">#F7F7F7</color>
+    <color name="black">#000000</color>
+    <color name="light_black">#404040</color>
+    <color name="sky_blue">#008be2</color>
 </resources>
