新增搜尋區域天氣分頁

--- a/app/src/main/res/layout/base_fragment.xml
+++ b/app/src/main/res/layout/base_fragment.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:layout_gravity="center"
         android:background="@drawable/toolbar_shadow"
         android:orientation="vertical">
@@ -22,15 +22,16 @@
                 android:id="@+id/llIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="horizontal" />
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
         </HorizontalScrollView>
     </LinearLayout>
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vpContainer"
