--- a/app/src/main/res/layout/five_day_item.xml
+++ b/app/src/main/res/layout/five_day_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/background_gray"
     android:orientation="vertical">
 
@@ -23,8 +23,7 @@
             android:id="@+id/ivWeatherCondition"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/sun" />
+            android:layout_marginTop="16dp" />
 
         <TextView
             android:id="@+id/tvMaxMinTemp"
